--- a/estilo/style.css
+++ b/estilo/style.css
@@ -120,7 +120,7 @@ main a:hover{
     color: var(--cor4);
 }
 main img{
-    max-width: 350px;
+    max-width: auto;
 }
 main img.pequena {
     width: 50%;
